@@ -10,10 +10,10 @@ environment:
     # authentication servlet url
     google_auth_servlet_url: https://eveagents.appspot.com/auth/google
 
-# context settings
-# the context is used by agents for storing their state.
-context:
-  class: DatastoreContextFactory
+# state settings
+# the state is used by agents for storing their state.
+state:
+  class: DatastoreStateFactory
 
 # scheduler settings
 scheduler:
