@@ -1,9 +1,9 @@
 # Eve settings
 
-# context settings
-# the context is used by agents for storing their state.
-context:
-  class: DatastoreContextFactory
+# state settings
+# the state is used by agents for storing their state.
+state:
+  class: DatastoreStateFactory
 
 # scheduler settings
 scheduler:
