@@ -7,6 +7,8 @@ http://almende.github.com/eve/
 - Implemented support for a resource name for xmpp connections.
 - Implemented subscriptionId for subscriptions, which can be used to uniquely
   identify any subscription. 
+- Renamed "context" to "state" (for example FileContext is now called 
+  FileState).
 - Renamed "class" to "type" in the AgentServlet, and consistently renamed
   everything internally. Everything is backwards compatible.
 - Improvements in the agents web interface.
